1) IE apparently needs to use all-relative font sizes in order for    its user font setting to work, so give it its own stylesheet. 2) Remove some more redundant property definitions
SVN-Revision: 1462

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<title>caAERS template</title>
-
-<link href="resources/styles.css" rel="stylesheet" type="text/css">
-
+  <title>caAERS template</title>
+  <link href="resources/styles.css" rel="stylesheet" type="text/css">
+  <!--[if IE]>
+  <link href="resources/ie.css" rel="stylesheet" type="text/css">
+  <![endif]-->
 </head>
 <body>
 
