Fix for offset tab backgrounds on OS X: anchor background image to another wrapper DIV, drop explicit heights and move line-height to anchor tag
SVN-Revision: 1464

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -18,25 +18,25 @@
     </div>
 
     <div id="sections">
-      <div class="tab"><a href="#">Adverse Events</a></div>
-      <div class="selected tab"><a href="#">Studies</a></div>
-      <div class="tab"><a href="#">Participants</a></div>
-      <div class="tab"><a href="#">Reports</a></div>
-      <div class="tab"><a href="#">Administration</a></div>
+      <div class="tab"><div><a href="#">Adverse Events</a></div></div>
+      <div class="selected tab"><div><a href="#">Studies</a></div></div>
+      <div class="tab"><div><a href="#">Participants</a></div></div>
+      <div class="tab"><div><a href="#">Reports</a></div></div>
+      <div class="tab"><div><a href="#">Administration</a></div></div>
     </div>
   </div>
 </div>
 
-<div class="taskbar">
+<div id="taskbar">
   Tasks: <a href="#" id="current-task" name="current">Enter AE report</a> <a href="#">List AEs</a>
 </div>
 
 <div id="workflow-tabs">
-  <div class="selected tab"><a href="#">Begin</a></div>
-  <div class="tab"><a href="#">Basics</a></div>
-  <div class="tab"><a href="#">Medical</a></div>
-  <div class="tab"><a href="#">Labs</a></div>
-  <div class="tab"><a href="#">Treatment</a></div>
+  <div class="selected tab"><div><a href="#">Begin</a></div></div>
+  <div class="tab"><div><a href="#">Basics</a></div></div>
+  <div class="selected tab"><div><a href="#">Medical</a></div></div>
+  <div class="tab"><div><a href="#">Labs</a></div></div>
+  <div class="tab"><div><a href="#">Treatment</a></div></div>
 </div>
 
 <div id="main">
@@ -77,9 +77,9 @@ Box content
 <!-- box border divs --><div class="box_T"><div class="box_L"><div class="box_R"><div class="box_B"><div class="box_TL"><div class="box_TR"><div class="box_BL"><div class="box_BR">
 
 <div id="inner-tabs">
-<div class="selected tab"><a href="#">Tab 1</a></div>
-<div class="tab"><a href="#">Tab 2</a></div>
-<div class="tab"><a href="#">Tab 3</a></div>
+<div class="tab"><div><a href="#">Tab 1</a></div></div>
+<div class="selected tab"><div><a href="#">Tab 2</a></div></div>
+<div class="tab"><div><a href="#">Longer tab</a></div></div>
 
 
 </div>
