1) Remove some unneeded styles from logo images 2) Fix problem with H1 running into workflow tabs on IE 3) Organize styles in CSS by page order (roughly)
SVN-Revision: 1465

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -11,7 +11,8 @@
 
 <div id="header">
   <div class="background-anchor-R">
-    <img src="images/caAERSlogo.gif" alt="caAERS - Cancer Adverse Event Reporting System" class="caAERSlogo"> <img src="images/caAERS.gif" alt="caAERS - Cancer Adverse Event Reporting System" class="caAERStagline">
+    <img src="images/caAERSlogo.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERSlogo"> 
+    <img src="images/caAERS.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERStagline">
 
     <div id="login-action">
       <a href="#">Login</a>
@@ -37,6 +38,7 @@
   <div class="selected tab"><div><a href="#">Medical</a></div></div>
   <div class="tab"><div><a href="#">Labs</a></div></div>
   <div class="tab"><div><a href="#">Treatment</a></div></div>
+  <div class="last tab"><div><a href="#">Review</a></div></div>
 </div>
 
 <div id="main">
