1) Rename box border related classes 2) Add interior DIV to cleanly isolate box content from borders 3) Add h4 subheading example within main box
SVN-Revision: 1466

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -10,9 +10,9 @@
 <body>
 
 <div id="header">
-  <div class="background-anchor-R">
-    <img src="images/caAERSlogo.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERSlogo"> 
-    <img src="images/caAERS.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERStagline">
+  <div class="background-R">
+    <img src="images/caAERSlogo.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERS-logo"> 
+    <img src="images/caAERS.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERS-tagline">
 
     <div id="login-action">
       <a href="#">Login</a>
@@ -46,66 +46,72 @@
 <h1>Adverse Events : Enter AE Report : Reporter</h1>
 
 <div id="summary-pane" class="pane">
+  <div class="box">
+    <!-- header -->
+    <div class="header"><div class="background-L"><div class="background-R">
+      <h2>Summary</h2>
+    </div></div></div> 
+    <!-- end header -->
 
-<!-- box header divs --><div class="boxHeader"><div class="boxHeader_L"><div class="boxHeader_R">
+    <!-- inner border -->
+    <div class="border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
+      <!-- <div class="boxTabs">
+        <h3>No tabs (optional) header</h3>
+      </div> -->
 
-<h2>Summary</h2>
+      <div class="interior">
+        <h3>No tabs (optional) header</h3>
 
-<!-- end box header divs --></div></div></div>
+        <div class="content first">
+          Box content
+        </div>
+      </div>
 
-<!-- box border divs --><div class="box_T"><div class="box_L"><div class="box_R"><div class="box_B"><div class="box_TL"><div class="box_TR"><div class="box_BL"><div class="box_BR">
-
-<div class="boxTabs"></div>
-
-<div class="boxContent">
-
-Box content
-
-<!-- end boxcontent --></div>
-
-<!-- end box border divs --></div></div></div></div></div></div></div></div>
-
-<!-- end summaryPane --></div>
+    </div></div></div></div></div></div></div></div>
+    <!-- end inner border -->
+  </div>
+  <!-- end box -->
+</div>
+<!-- end summary-pane -->
 
 
 <div id="main-pane" class="pane">
+  <div class="box">
+    <!-- header -->
+    <div class="header"><div class="background-L"><div class="background-R">
+      <h2>Main heading</h2>
+    </div></div></div> 
+    <!-- end header -->
 
-<!-- box header divs --><div class="boxHeader"><div class="boxHeader_L"><div class="boxHeader_R">
+    <!-- inner border -->
+    <div class="border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
+      <div id="inner-tabs">
+        <div class="tab"><div><a href="#">Tab 1</a></div></div>
+        <div class="selected tab"><div><a href="#">Tab 2</a></div></div>
+        <div class="tab"><div><a href="#">Longer tab</a></div></div>
+      </div>
 
-<h2>Main Pane heading</h2>
+      <div class="interior">
+        <div class="content">
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse viverra vehicula diam. Suspendisse potenti. Praesent elit odio, semper non, rutrum vel, auctor mattis, neque. Mauris massa lectus, tincidunt non, pharetra in, sodales et, sem. Fusce dapibus scelerisque velit. Nullam elit mi, adipiscing ut, vehicula a, semper in, nulla. Mauris eu eros a ligula fringilla dictum. Aenean tristique cursus enim. Etiam cursus sodales magna. Nam scelerisque, sapien et viverra consectetuer, pede mi ornare erat, vitae venenatis dolor magna vel dui. Cras elit ligula, malesuada vel, commodo a, tristique non, erat. Fusce fermentum metus commodo mi. Ut viverra neque sed eros. Vestibulum cursus sodales lacus. Vivamus libero leo, semper a, egestas vel, sagittis eu, est. Sed gravida eleifend mauris. Donec quis mauris ac leo dapibus ullamcorper. Sed feugiat lorem non felis facilisis sollicitudin. 
+        </div>
+        <h4>Vivamus A</h4>
+        <div class="content">
+          Scelerisque sapien eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut vestibulum. Vestibulum in ante. Morbi consequat nibh sed eros. Proin non nibh. Curabitur at tellus eu est vestibulum blandit. Curabitur laoreet, quam quis posuere malesuada, felis augue dignissim arcu, non pulvinar tortor diam ut dolor. Curabitur id tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla interdum vulputate ante. Aenean volutpat mi et orci. Nunc vel odio. Vivamus mattis libero a dolor. In at nibh. Donec mattis fermentum ligula. 
+        </div>
+      </div>
 
-<!-- end box header divs --></div></div></div>
-
-<!-- box border divs --><div class="box_T"><div class="box_L"><div class="box_R"><div class="box_B"><div class="box_TL"><div class="box_TR"><div class="box_BL"><div class="box_BR">
-
-<div id="inner-tabs">
-<div class="tab"><div><a href="#">Tab 1</a></div></div>
-<div class="selected tab"><div><a href="#">Tab 2</a></div></div>
-<div class="tab"><div><a href="#">Longer tab</a></div></div>
-
+    </div></div></div></div></div></div></div></div>
+    <!-- end inner border -->
+  </div>
+  <!-- end box -->
+</div>
+<!-- end main-pane -->
 
 </div>
-
-<div class="boxContent">
-
-
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse viverra vehicula diam. Suspendisse potenti. Praesent elit odio, semper non, rutrum vel, auctor mattis, neque. Mauris massa lectus, tincidunt non, pharetra in, sodales et, sem. Fusce dapibus scelerisque velit. Nullam elit mi, adipiscing ut, vehicula a, semper in, nulla. Mauris eu eros a ligula fringilla dictum. Aenean tristique cursus enim. Etiam cursus sodales magna. Nam scelerisque, sapien et viverra consectetuer, pede mi ornare erat, vitae venenatis dolor magna vel dui. Cras elit ligula, malesuada vel, commodo a, tristique non, erat. Fusce fermentum metus commodo mi. Ut viverra neque sed eros. Vestibulum cursus sodales lacus. Vivamus libero leo, semper a, egestas vel, sagittis eu, est. Sed gravida eleifend mauris. Donec quis mauris ac leo dapibus ullamcorper. Sed feugiat lorem non felis facilisis sollicitudin. 
-
-Vivamus scelerisque sapien eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut vestibulum. Vestibulum in ante. Morbi consequat nibh sed eros. Proin non nibh. Curabitur at tellus eu est vestibulum blandit. Curabitur laoreet, quam quis posuere malesuada, felis augue dignissim arcu, non pulvinar tortor diam ut dolor. Curabitur id tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla interdum vulputate ante. Aenean volutpat mi et orci. Nunc vel odio. Vivamus mattis libero a dolor. In at nibh. Donec mattis fermentum ligula. 
-
-
-
-<!-- end boxcontent --></div>
-
-<!-- end box border divs --></div></div></div></div></div></div></div></div>
-
-<!-- end mainPane --></div>
-
-
-</div>
+<!-- end #main -->
 
 
 <br clear="all">
-<div id="footer">&nbsp;</div>
+<div id="footer"></div>
 </html>
