Tighten up internal padding under internal tabs
SVN-Revision: 1467

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -84,8 +84,8 @@
     <!-- end header -->
 
     <!-- inner border -->
-    <div class="border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
-      <div id="inner-tabs">
+    <div class="tabbed border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
+      <div class="inner-tabs">
         <div class="tab"><div><a href="#">Tab 1</a></div></div>
         <div class="selected tab"><div><a href="#">Tab 2</a></div></div>
         <div class="tab"><div><a href="#">Longer tab</a></div></div>
