1) Make tabs and untabbed-box headers the same size 2) Other small tweaks
SVN-Revision: 1469

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -76,7 +76,7 @@
 
 
 <div id="main-pane" class="pane">
-  <div class="box">
+  <div class="tabbed box">
     <!-- header -->
     <div class="header"><div class="background-L"><div class="background-R">
       <h2>Main heading</h2>
@@ -84,7 +84,7 @@
     <!-- end header -->
 
     <!-- inner border -->
-    <div class="tabbed border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
+    <div class="border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
       <div class="inner-tabs">
         <div class="tab"><div><a href="#">Tab 1</a></div></div>
         <div class="selected tab"><div><a href="#">Tab 2</a></div></div>
@@ -112,6 +112,5 @@
 <!-- end #main -->
 
 
-<br clear="all">
 <div id="footer"></div>
 </html>
