Add delete checkboxes
SVN-Revision: 1476

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -134,7 +134,7 @@
           </div>
         </div>
         
-        <h4>Vivamus A</h4>
+        <h4>Vivamus A <label class="delete-control">Delete? <input type="checkbox" name="deleteA"></label></h4>
         <div class="content">
           <div class="row">
             <div class="label">Scelerisque sapien</div>
@@ -154,7 +154,7 @@
           </div>
         </div>
         
-        <h4>Vivamus B</h4>
+        <h4>Vivamus B <label class="delete-control">Delete? <input type="checkbox" name="deleteB"></label></h4>
         <div class="content">
           <div class="row">
             <div class="label">Scelerisque sapien</div>
