Remove caAERS from element IDs; align header img alts with image content
SVN-Revision: 1477

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -11,8 +11,8 @@
 
 <div id="header">
   <div class="background-R">
-    <img src="images/caAERSlogo.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERS-logo"> 
-    <img src="images/caAERS.gif" alt="caAERS - Cancer Adverse Event Reporting System" id="caAERS-tagline">
+    <img src="images/caAERSlogo.gif" alt="caAERS" id="logo"> 
+    <img src="images/caAERS.gif" alt="cancer Adverse Event Reporting System" id="tagline">
 
     <div id="login-action">
       <a href="#">Login</a>
