Add flow buttons
SVN-Revision: 1478

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -118,9 +118,9 @@
               <input type="text" value="18.4">
               ante
               <select>
-                <option>Minutes</option>
-                <option>Hours</option>
-                <option>Days</option>
+                <option>felis</option>
+                <option>augue</option>
+                <option>dignissim</option>
               </select>
             </div>
           </div>
@@ -173,9 +173,28 @@
             </div>
           </div>
         </div>
+        
+        <div class="content buttons autoclear">
+          <div class="local-buttons">
+            <a href="#">Add vivamus</a>
+          </div>
+          <div class="flow-buttons">
+            <span class="prev">
+              <a href="#">&laquo; Previous</a>
+            </span>
+            <span class="next">
+              <a href="#">Save</a>
+              <a href="#">Save &amp; Continue &raquo;</a>
+            </span>
+          </div>
+        </div>
         <!--
           Scelerisque sapien eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vestibulum ante ipsum 
-          primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut vestibulum. Vestibulum in ante. Morbi consequat nibh sed eros. Proin non nibh. Curabitur at tellus eu est vestibulum blandit. Curabitur laoreet, quam quis posuere malesuada, felis augue dignissim arcu, non pulvinar tortor diam ut dolor. Curabitur id tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla interdum vulputate ante. Aenean volutpat mi et orci. Nunc vel odio. Vivamus mattis libero a dolor. In at nibh. Donec mattis fermentum ligula. 
+          primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut vestibulum. Vestibulum in ante. Morbi 
+          consequat nibh sed eros. Proin non nibh. Curabitur at tellus eu est vestibulum blandit. Curabitur laoreet, 
+          quam quis posuere malesuada, felis augue dignissim arcu, non pulvinar tortor diam ut dolor. Curabitur id 
+          tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla interdum vulputate ante. Aenean 
+          volutpat mi et orci. Nunc vel odio. Vivamus mattis libero a dolor. In at nibh. Donec mattis fermentum ligula. 
           -->
         
       </div>
