Form field styles
SVN-Revision: 1479

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -110,7 +110,7 @@
           </div>
           <div class="row">
             <div class="label"><label for="input2"><span class="required-indicator">*</span>Elit</label></div>
-            <div class="value"><textarea id="input2"></textarea></div>
+            <div class="value"><textarea id="input2" rows="4" cols="30"></textarea></div>
           </div>
           <div class="row">
             <div class="label">Vestibulum</div>
