1) Add realistic summary content & styles 2) Drop optional h3 at top of box -- since there's only one interior per box, it wouldn't ever be used 3) Switch section subdividing h4s to h3s (since there won't be an h3 above them ever)
SVN-Revision: 1485

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -55,15 +55,16 @@
 
     <!-- inner border -->
     <div class="border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
-      <!-- <div class="boxTabs">
-        <h3>No tabs (optional) header</h3>
-      </div> -->
-
       <div class="interior">
-        <h3>No tabs (optional) header</h3>
-
-        <div class="content first">
-          Box content
+        <div class="content">
+          <div class="row">
+            <div class="label">Participant</div>
+            <div class="value">Curabitur Tellus</div>
+          </div>
+          <div class="row">
+            <div class="label">Study</div>
+            <div class="value">Nunc vel odio. Vivamus mattis libero a dolor in at nibh donec mattis fermentum ligula</div>
+          </div>
         </div>
       </div>
 
@@ -134,7 +135,7 @@
           </div>
         </div>
         
-        <h4>Vivamus A <label class="delete-control">Delete? <input type="checkbox" name="deleteA"></label></h4>
+        <h3>Vivamus A <label class="delete-control">Delete? <input type="checkbox" name="deleteA"></label></h3>
         <div class="content">
           <div class="row">
             <div class="label">Scelerisque sapien</div>
@@ -154,7 +155,7 @@
           </div>
         </div>
         
-        <h4>Vivamus B <label class="delete-control">Delete? <input type="checkbox" name="deleteB"></label></h4>
+        <h3>Vivamus B <label class="delete-control">Delete? <input type="checkbox" name="deleteB"></label></h3>
         <div class="content">
           <div class="row">
             <div class="label">Scelerisque sapien</div>
