Switch tabs to use semantic unordered list instead of plain divs
SVN-Revision: 1486

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -18,13 +18,13 @@
       <a href="#">Login</a>
     </div>
 
-    <div id="sections">
-      <div class="tab"><div><a href="#">Adverse Events</a></div></div>
-      <div class="selected tab"><div><a href="#">Studies</a></div></div>
-      <div class="tab"><div><a href="#">Participants</a></div></div>
-      <div class="tab"><div><a href="#">Reports</a></div></div>
-      <div class="tab"><div><a href="#">Administration</a></div></div>
-    </div>
+    <ul id="sections" class="tabs">
+      <li><div><a href="#">Adverse Events</a></div></li>
+      <li class="selected"><div><a href="#">Studies</a></div></li>
+      <li><div><a href="#">Participants</a></div></li>
+      <li><div><a href="#">Reports</a></div></li>
+      <li><div><a href="#">Administration</a></div></li>
+    </li>
   </div>
 </div>
 
@@ -32,14 +32,14 @@
   Tasks: <a href="#" id="current-task" name="current">Enter AE report</a> <a href="#">List AEs</a>
 </div>
 
-<div id="workflow-tabs">
-  <div class="selected tab"><div><a href="#">Begin</a></div></div>
-  <div class="tab"><div><a href="#">Basics</a></div></div>
-  <div class="selected tab"><div><a href="#">Medical</a></div></div>
-  <div class="tab"><div><a href="#">Labs</a></div></div>
-  <div class="tab"><div><a href="#">Treatment</a></div></div>
-  <div class="last tab"><div><a href="#">Review</a></div></div>
-</div>
+<ul id="workflow-tabs" class="tabs">
+  <li class="selected"><div><a href="#">Begin</a></div></li>
+  <li><div><a href="#">Basics</a></div></li>
+  <li class="selected"><div><a href="#">Medical</a></div></li>
+  <li><div><a href="#">Labs</a></div></li>
+  <li><div><a href="#">Treatment</a></div></li>
+  <li class="last"><div><a href="#">Review</a></div></li>
+</ul>
 
 <div id="main">
 
@@ -86,11 +86,11 @@
 
     <!-- inner border -->
     <div class="border-T"><div class="border-L"><div class="border-R"><div class="border-B"><div class="border-TL"><div class="border-TR"><div class="border-BL"><div class="border-BR">
-      <div class="inner-tabs">
-        <div class="tab"><div><a href="#">Tab 1</a></div></div>
-        <div class="selected tab"><div><a href="#">Tab 2</a></div></div>
-        <div class="tab"><div><a href="#">Longer tab</a></div></div>
-      </div>
+      <ul class="tabs inner">
+        <li><div><a href="#">Tab 1</a></div></li>
+        <li class="selected"><div><a href="#">Tab 2</a></div></li>
+        <li><div><a href="#">Longer tab</a></div></li>
+      </ul>
 
       <div class="interior">
         
