--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>caAERS template</title>
-  <link href="resources/styles.css" rel="stylesheet" type="text/css">
+  <link href="resources/common.css" rel="stylesheet" type="text/css">
+  <link href="resources/tabbedflow.css" rel="stylesheet" type="text/css">
   <!--[if IE]>
   <link href="resources/ie.css" rel="stylesheet" type="text/css">
   <![endif]-->
