Add flash message box
SVN-Revision: 1719

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -94,7 +94,11 @@
       </ul>
 
       <div class="interior">
-        
+
+        <div id="flash-message" class="info">
+          Updated
+        </div>
+
         <div class="content">
           <p class="instructions">This is a brief instructional message.</p>
           <div class="row">
