Add explicit image size for logo
SVN-Revision: 2537

--- a/Visual Design/new_template/template.html
+++ b/Visual Design/new_template/template.html
@@ -12,7 +12,7 @@
 
 <div id="header">
   <div class="background-R">
-    <img src="images/caAERSlogo.gif" alt="caAERS" id="logo"> 
+    <img src="images/caAERSlogo.gif" alt="caAERS" id="logo" width="129" height="40"> 
     <img src="images/caAERS.gif" alt="cancer Adverse Event Reporting System" id="tagline">
 
     <div id="login-action">
