--- a/caAERS eLearning/web/index.html
+++ b/caAERS eLearning/web/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js/content.js"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
 	<script type="text/javascript" src="js/captivate.js"></script>
-	<link rel="shortcut icon" href="images/caaers.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="images/caaers.ico" type="image/x-icon"/>
 </head>
 <body>
 <div id="main">
@@ -17,8 +17,11 @@
 			<a href='caaers_link' class='caaers_link'><img id="logo_image" src="images/login-logo.png" alt="Cancer Adverse Event Reporting System"/></a>
 			<a href='content_main' class='elearning_link'><h2>eLearning System</h2></a>
 		</div>
-		<div id="role_breadcrumb" class="breadcrumb"></div>
-		<div id="lesson_breadcrumb" class="breadcrumb"></div>
+		<div id="tree"></div>
+		<div id="breadcrumbs" style="display: none;">
+			<div id="role_breadcrumb" class="breadcrumb"></div>
+			<div id="lesson_breadcrumb" class="breadcrumb"></div>
+		</div>
 	</div>
 	
 	<div id="content">
