--- a/caAERS eLearning/web/index.html
+++ b/caAERS eLearning/web/index.html
@@ -4,6 +4,8 @@
 	<title>caAERS eTraining</title>	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.cookie.js"></script>
+	<script type="text/javascript" src="js/jquery.parameters.js"></script>
 	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/content.js"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
@@ -21,6 +23,9 @@
 		<div id="breadcrumbs" style="display: none;">
 			<div id="role_breadcrumb" class="breadcrumb"></div>
 			<div id="lesson_breadcrumb" class="breadcrumb"></div>
+		</div>
+		<div id="size_wrapper">
+			<a id="size" href="size">Change size</a>
 		</div>
 	</div>
 	
